--- a/prosto_ogon/widgets.css
+++ b/prosto_ogon/widgets.css
@@ -212,7 +212,7 @@ body {
     min-height: 40px;
     width: 100%;
     z-index: 1;
-    background-color: #0078d2;
+    background: linear-gradient(0deg, #e68022 0%, #ffb149 100%);
     color: #fff;
     border-radius: 99px;
     font-size: 16px;
@@ -319,7 +319,7 @@ body {
     min-height: 40px;
     width: 100%;
     z-index: 1;
-    background-color: #0078d2;
+    background: linear-gradient(0deg, #e68022 0%, #ffb149 100%);
     color: #fff;
     border-radius: 99px;
     font-size: 16px;
@@ -426,7 +426,7 @@ body {
     min-height: 40px;
     width: 100%;
     z-index: 1;
-    background-color: #0078d2;
+    background: linear-gradient(0deg, #e68022 0%, #ffb149 100%);
     color: #fff;
     border-radius: 99px;
     font-size: 16px;
