--- a/modals/index.css
+++ b/modals/index.css
@@ -159,12 +159,14 @@ body {
     border-radius: 4px;
 
     min-height: 739px;
-    min-width: 1184px;
+    width: 100%;
+    max-width: 1184px;
+    max-height: 90vh;
 }
 
 .modal__header {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     padding: 20px;
     border-bottom: 1px solid var(--bg-border);
