--- a/prosto_ogon/index.css
+++ b/prosto_ogon/index.css
@@ -1015,3 +1015,90 @@ body {
     height: 385px;
     z-index: 0;
 }
+
+.section-info {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    margin-top: var(--space-xl);
+    position: relative;
+}
+
+.section-info__btn {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background-color: var(--control-primary-bg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section-info__btn img {
+    width: 24px;
+    height: 24px;
+}
+
+.section-info__popover {
+    width: 270px;
+    background-color: var(--white);
+    position: absolute;
+    bottom: calc(100% - 12px);
+    right: 48px;
+    box-shadow: 0 4px 16px 0 #00203314;
+    border-radius: var(--space-m) var(--space-m) var(--space-xs) var(--space-m);
+    padding: 12px;
+    display: none;
+}
+
+.section-info__popover_is-open {
+    display: block;
+}
+
+.section-info__popover-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 12px;
+}
+
+.section-info__popover-title {
+    font-size: 12px;
+    line-height: 1.5;
+    font-weight: 700;
+    color: var(--typo-primary);
+}
+
+.section-info__popover-close {
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--control-ghost-bg);
+    border-radius: 50%;
+}
+
+.section-info__popover-close img {
+    width: 12px;
+    height: 12px;
+}
+
+.section-info__popover-contacts {
+    display: flex;
+    flex-direction: column;
+    padding: 8px 12px;
+    gap: 4px;
+    border-radius: 12px;
+    background-color: #ecf1f4;
+    color: var(--typo-primary);
+}
+
+.section-info__popover-contacts a {
+    color: var(--control-primary-bg);
+}
+
+.section-info__popover-user {
+    margin-top: 16px;
+}
