--- a/modals/index.css
+++ b/modals/index.css
@@ -168,8 +168,7 @@ body {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 20px;
-    border-bottom: 1px solid var(--bg-border);
+    padding: 32px 24px 20px;
 }
 
 .modal__header-right {
