--- a/events/register/index.css
+++ b/events/register/index.css
@@ -42,6 +42,8 @@
     --informer-border-success: #22c38e;
     --button-color-disable: rgba(0, 32, 51, 0.26);
     --button-bg-color-disable: rgba(0, 66, 105, 0.07);
+    --bg-alert: #eb5757;
+    --color-control-bg-ghost-hover: rgba(0, 66, 105, 0.05);
 }
 
 * {
@@ -182,6 +184,50 @@ body {
     font-weight: 600;
 }
 
+._font-size-2xs {
+    font-size: var(--size-text-2x);
+}
+
+._font-size-xs {
+    font-size: var(--size-text-xs);
+}
+
+._font-size-s {
+    font-size: var(--size-text-s);
+}
+
+._font-size-m {
+    font-size: var(--size-text-m);
+}
+
+._font-size-l {
+    font-size: var(--size-text-l);
+}
+
+._font-size-xl {
+    font-size: var(--size-text-xl);
+}
+
+._font-size-2xl {
+    font-size: var(--size-text-2xl);
+}
+
+._font-size-3xl {
+    font-size: var(--size-text-3xl);
+}
+
+._line-height-small {
+    line-height: 1.2;
+}
+
+._line-height-normal {
+    line-height: 1.5;
+}
+
+._font-weight-normal {
+    font-weight: 400;
+}
+
 .button {
     min-height: var(--space-xl);
     border-radius: var(--space-xs);
@@ -204,6 +250,11 @@ body {
 .button_view_ghost {
     background-color: var(--control-ghost-bg);
     color: var(--control-ghost-typo);
+}
+
+.button_view_ghost:not(:disabled):hover,
+.button_view_ghost:not(:disabled):not(.button_loading):hover {
+    background-color: var(--color-control-bg-ghost-hover);
 }
 
 .button_view_primary:not(:disabled):hover,
@@ -951,4 +1002,40 @@ body {
 
 .registration-event-list-item__subscriber a {
     color: var(--control-primary-bg);
+}
+
+.confirm-modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.confirm-modal._loading .confirm-modal__confirm {
+    opacity: 0.6;
+    cursor: not-allowed;
+}
+
+.confirm-modal__modal-content {
+    width: 100%;
+    max-width: 450px;
+    padding: var(--space-xl) 20px 20px;
+}
+
+.registration-event-list-confirm-modal__handles {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: var(--space-xs);
+}
+
+.registration-event-list-item__subscriber-user {
+    display: flex;
+}
+
+.registration-event-list-item__subscriber-user._hidden {
+    display: none;
+}
+
+.registration-event-list-item__subscriber-name {
+    margin-right: 4px;
 }
