--- a/events/index.css
+++ b/events/index.css
@@ -1054,3 +1054,32 @@ body {
     flex-direction: column;
     flex-grow: 1;
 }
+
+.registration-event-list-not-found {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.registration-event-list-not-found._hidden {
+    display: none;
+}
+
+.registration-event-list-not-found__img {
+    width: 300px;
+    height: 190px;
+    object-fit: contain;
+    object-position: center;
+}
+
+.registration-event-list-not-found__title {
+    margin-top: var(--space-l);
+    color: var(--typo-primary);
+    text-align: center;
+}
+
+.registration-event-list-not-found__text {
+    margin-top: var(--space-s);
+    color: var(--typo-secondary);
+    text-align: center;
+}
