fix events list

--- a/events/index.css
+++ b/events/index.css
@@ -979,13 +979,6 @@ body {
     margin: 40px auto;
 }
 
-.registration-event-list {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    gap: var(--space-s);
-}
-
 .confirm-modal {
     display: flex;
     align-items: center;
@@ -1001,6 +994,12 @@ body {
     width: 100%;
     max-width: 450px;
     padding: var(--space-xl) 20px 20px;
+}
+
+.registration-event-list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .registration-event-list-confirm-modal__handles {
@@ -1020,7 +1019,7 @@ body {
     border-radius: var(--space-s);
     background-color: var(--white);
     color: var(--typo-primary);
-    border: 1px solid var(--bg-system);
+    border-bottom: 1px solid var(--bg-system);
 }
 
 .registration-event-list-item__subscriber {
