change modal selector

--- a/events/index.css
+++ b/events/index.css
@@ -268,7 +268,7 @@ body {
     margin-inline: auto;
 }
 
-.modal {
+.c-modal {
     position: fixed;
     inset: 0;
     height: 100%;
@@ -281,32 +281,32 @@ body {
     transition: opacity 0.2s, visibility 0.2s;
 }
 
-.modal_is-open {
+.c-modal_is-open {
     opacity: 1;
     visibility: visible;
 }
 
-.modal__content {
+.c-modal__content {
     display: flex;
     flex-direction: column;
     background-color: var(--white);
     border-radius: 8px;
 }
 
-.modal__header {
+.c-modal__header {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     padding-bottom: 24px;
 }
 
-.modal__header-right {
+.c-modal__header-right {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.modal__close {
+.c-modal__close {
     flex-shrink: 0;
     width: 32px;
     height: 32px;
@@ -315,11 +315,11 @@ body {
     justify-content: center;
 }
 
-.modal__close._hidden {
+.c-modal__close._hidden {
     display: none;
 }
 
-.modal__close-icon {
+.c-modal__close-icon {
     width: 16px;
     height: 16px;
 }
